# ESTA-Logic

./: .env.example  .eslintrc.json  .gitignore  .nxignore  .prettierrc  .vercelignore  ANALYSIS_SUMMARY.txt  API_ENDPOINTS.md  ARCHITECTURE.md  ARCHITECTURE_VISUAL_GUIDE.md  AUDIT_SUMMARY.md  BRANCH_QUICK_START.md  BUILD.md  BUILD_TROUBLESHOOTING.md  CHANGELOG.md  CODEOWNERS  CODERABBIT_REMOVAL.md  CODE_REVIEW_REPORT.md  CONSTRAINTS.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  DEPENDENCIES.md  DEPENDENCY_UPDATE_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_INVARIANCE.md  DEPLOYMENT_TROUBLESHOOTING.md  DEPRECATIONS.md  DEPRECATION_WARNINGS.md  DIAGNOSTIC_SUMMARY.md  DIRECTORY_TREE.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOMAIN_EXPANSION_CONTRACT.md  E2E_TEST_FIXES_SUMMARY.md  ENVIRONMENT.md  ESLint  FIREBASE_SETUP.md  FIX_VERCEL_TOKEN_ERROR.md  GITHUB_SECRETS_SETUP.md  GIT_BRANCH_SETUP_README.md  (+75 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-push
api/: .gitignore  README.md  approveUser.ts  edge-config.js  generateAuditPack.ts  getEmployeeCalendar.ts  health.ts  hello.js  job-status.ts  package-lock.json  package.json  processCsv.ts  project.json  register.ts  tsconfig.json  uploadDoctorNote.ts  validateBatch.ts  verifyUser.ts  vitest.config.ts
app/: README.md
apps/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
architecture/: ARCHITECTURE.md  CAPABILITY_MODEL.md  IPC_SPEC.md  MICROKERNEL_PRINCIPLES.md  MODULE_MANIFEST_SPEC.md
archive/: README.md
cli/: estactl
demo/: kernel-demo.ts  pilot-session-demo.ts  tsconfig.json  ux-experience-demo.ts
docs/: ARCHITECTURE_ENFORCEMENT_REPORT.md  ARCHITECTURE_QUICK_REFERENCE.md  AUDIT_SUMMARY.md  BEHAVIORAL_TESTING_GUIDE.md  BEHAVIORAL_TESTING_SUMMARY.md  BRANCHING_STRATEGY.md  BRANCH_PROTECTION.md  CENTRALIZATION_MIGRATION.md  CI-CD-TROUBLESHOOTING.md  DEPENDENCY-UPGRADE-PLAN.md  DEPLOYMENT_TROUBLESHOOTING.md  DEVELOPER_ONBOARDING.md  DIAGNOSIS_REPORT.md  DIRECTORY_TREE.md  DOCUMENT_CAPTURE_CONFIG.md  DOCUMENT_CAPTURE_SUMMARY.md  DOCUMENT_CAPTURE_USAGE.md  Design-Tone-Guide.md  ENGINEERING_ECOSYSTEM.md  ENGINEERING_PRINCIPLES.md  ENGINEERING_STANDARDS.md  ESTA_2025_COMPLIANCE.md  Experience-First-Architecture.md  Experience-Vision.md  FIGMA_INTEGRATION_GUIDE.md  FIREBASE_AUTH_EXECUTIVE_SUMMARY.md  FIREBASE_AUTH_TESTING_GUIDE.md  FIREBASE_MIGRATION_GUIDE.md  FIREBASE_SECURITY_AUDIT_REPORT.md  GITHUB-SECRETS-SETUP.md  GLEAM_DEVELOPMENT.md  GuidedFlowEngine.md  INTERFACE_BOUNDARIES.md  INTERFACE_BOUNDARIES_SUMMARY.md  LAZY_LOADING_GUIDE.md  METRICS_TRACKING.md  MICROKERNEL_ARCHITECTURE.md  MIGRATION_TO_EXPERIENCE_FIRST.md  MODERNIZATION_CHARTER.md  MODERNIZATION_INDEX.md  (+37 more)
e2e/: compliance-edge-cases.spec.ts  document-scanner.spec.ts  fixtures.ts  global-setup.ts  navigation.spec.ts  pto-workflow.spec.ts  registration.spec.ts  smoke.spec.ts  test-helpers.ts
engine/esta-kernel/: Cargo.toml
engine/esta-kernel/src/: kernel.rs  lib.rs  supervisor.rs
engine/esta-kernel/src/security/: audit.rs  capabilities.rs  mod.rs  sig.rs
estalogic_drivers/: gleam.toml
estalogic_kernel/: gleam.toml
estalogic_protocol/: gleam.toml
examples/: server-side-upload-verification.ts
functions/: .gitignore  (+4 more)
tauri-shell/: Cargo.toml
tauri-shell/src/: kernel_bridge.rs  tauri_entry.ts
tauri-shell/src/api/: fs.rs  net.rs  notifications.rs  time.rs
tauri-shell/src/utils/: serialize.rs
(+833 files in other folders)
