[package]
name = "esta-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "fs"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
wasmtime = { version = "8.0", features = ["async"], optional = true }
async-channel = "1.8"

[features]
default = ["wasmtime"]
