[package]
name = "esta-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
# Pin wasmtime to specific minor version for security; monitor via cargo-audit and Dependabot.
# See: https://github.com/bytecodealliance/wasmtime/security/advisories
wasmtime = { version = "=8.0.1", features = ["async"], optional = true }
async-channel = "1.8"
sha2 = "0.10"
hex = "0.4"
# Ed25519 signature verification for module signing
# Using ring for Ed25519 as it's well-audited and widely used
ring = "0.17"
# Chrono-free timestamp handling for audit logs
thiserror = "1.0"

[features]
default = ["wasmtime"]
