[package]
name = "esta-rainforest"
version = "1.0.0"
edition = "2021"
description = "ESTA Rainforest Desktop Application"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.34", features = ["rt", "macros"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
